--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@
 .App-link {
   color: #61dafb;
 }
+.Hillcontent {
+  margin: 6%;
+  margin-top: 5px;
+}
+
 
 @keyframes App-logo-spin {
   from {
